Removing IP ranges from RemoteIP

--- a/.github/workflows/publish-prod.yml
+++ b/.github/workflows/publish-prod.yml
@@ -59,6 +59,7 @@ jobs:
               VERSION=${{ steps.prepare.outputs.version }}
               BUILD_DATE=${{ steps.prepare.outputs.build_date }}
               VCS_REF=${GITHUB_SHA::8}
+              WORDPRESS_VERSION=${{ steps.prepare.outputs.version }}
           tags: |
             aperimau/wordpress:${{ steps.prepare.outputs.version }}
             aperimau/wordpress:latest
