--- a/.github/workflows/publish-prod.yml
+++ b/.github/workflows/publish-prod.yml
@@ -8,11 +8,9 @@ jobs:
   multi-registries:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Prepare
+      - name: Prepare
         id: prepare
         run: |
           VERSION=edge
@@ -27,27 +25,22 @@ jobs:
 
           echo ::set-output name=version::${VERSION}
           echo ::set-output name=build_date::$(date -u +'%Y-%m-%dT%H:%M:%SZ') \
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CI_PAT }}
-      -
-        name: Build container and push
+      - name: Build container and push
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -56,11 +49,11 @@ jobs:
           platforms: linux/amd64
           push: true
           build-args: |
-              VERSION=${{ steps.prepare.outputs.version }}
-              BUILD_DATE=${{ steps.prepare.outputs.build_date }}
-              VCS_REF=${GITHUB_SHA::8}
-              WORDPRESS_VERSION=${{ steps.prepare.outputs.version }}
-              MAX_UPLOAD=1024M
+            VERSION=${{ steps.prepare.outputs.version }}
+            BUILD_DATE=${{ steps.prepare.outputs.build_date }}
+            VCS_REF=${GITHUB_SHA::8}
+            WORDPRESS_VERSION=${{ steps.prepare.outputs.version }}
+            MAX_UPLOAD=1024M
           tags: |
             aperimau/wordpress:${{ steps.prepare.outputs.version }}
             aperimau/wordpress:latest
