--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -27,20 +27,20 @@ RUN apt-get update && \
   apt-get install -y libmagickwand-dev=8:6.9.11.60+dfsg-1.3 build-essential=12.9 --no-install-recommends && \
   mkdir -p /usr/src/php/ext/imagick; \
   echo "Downloading https://github.com/Imagick/imagick/archive/refs/tags/${IMAGICK_VERSION}.tar.gz"; \
-  curl -fsSL https://github.com/Imagick/imagick/archive/refs/tags/${IMAGICK_VERSION}.tar.gz | tar xvz -C "/usr/src/php/ext/imagick" --strip 1
-
-RUN docker-php-ext-install pdo_mysql imagick && \
-  printf "memory_limit = \${PHP_MEMORY_LIMIT}\n\nupload_max_filesize = \${PHP_UPLOAD_MAX_FILESIZE}\npost_max_size = \${PHP_POST_MAX_SIZE} \nmax_file_uploads = \${PHP_MAX_FILE_UPLOADS}\n\nmax_input_time = \${PHP_MAX_INPUT_TIME}\nmax_execution_time = \${PHP_MAX_EXECUTION_TIME}\n\nmax_input_vars = \${PHP_MAX_INPUT_VARS}" > /usr/local/etc/php/conf.d/aperim.ini && \
+  curl -fsSL https://github.com/Imagick/imagick/archive/refs/tags/${IMAGICK_VERSION}.tar.gz | tar xvz -C "/usr/src/php/ext/imagick" --strip 1 && \
+  docker-php-ext-install pdo_mysql imagick && \
+  printf "memory_limit = \${PHP_MEMORY_LIMIT}\n\nupload_max_filesize = \${PHP_UPLOAD_MAX_FILESIZE}\npost_max_size = \${PHP_POST_MAX_SIZE} \nmax_file_uploads = \${PHP_MAX_FILE_UPLOADS}\n\nmax_input_time = \${PHP_MAX_INPUT_TIME}\nmax_execution_time = \${PHP_MAX_EXECUTION_TIME}\n\nmax_input_vars = \${PHP_MAX_INPUT_VARS}\n\n" > /usr/local/etc/php/conf.d/aperim.ini && \
   printf "extension=redis.so\nextension=igbinary.so\n" > /usr/local/etc/php/conf.d/redis.ini && \
+  touch /usr/local/etc/php/conf.d/pear.ini && \
 	a2enmod remoteip; \
 	{ \
 		echo 'RemoteIPHeader X-Forwarded-For'; \
 	} > /etc/apache2/conf-available/remoteip.conf; \
 	a2enconf remoteip && \
-  yes | pecl install igbinary && \
-  yes | pecl install redis
-
-RUN apt-get remove -y build-essential && \
+  pear config-set php_ini /usr/local/etc/php/conf.d/pear.conf && \
+  pecl install igbinary && \
+  pecl install redis && \
+  apt-get remove -y build-essential && \
   rm -rf /var/lib/apt/lists/*
 
 ARG BUILD_DESCRIPTION="WordPress version ${WORDPRESS_VERSION} with imagemagick and redis support"
